finished desktop header & footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,45 @@
   <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-  
+  <div class="main-layout">
+    <header>
+      <a class="logo" href="./index.html">
+        <img src="https://freewebsitetemplates.com/preview/mustacheenthusiast/images/logo.jpg" alt="Logo">
+      </a>
+
+    <span id="mobile-navigation"></span>
+    <div class="navigation">
+        <ul class="nav">
+          <li> <a href="./index.html" style="text-decoration: none">Home</a></li>
+          <li> <a href="./pages/about.html" style="text-decoration: none">About</a></li>
+          <li> <a href="./pages/gallery.html" style="text-decoration: none">Gallery</a></li>
+          <li> <a href="./pages/blog.html" style="text-decoration: none">Blog</a></li>
+          <li> <a href="./pages/contact.html" style="text-decoration: none">Contact</a></li>
+        </ul>
+    </div>
+
+    </header>
+    <main id="main"></main>
+    <footer>
+      <div>
+        <p>© 2023 by Mustacchio. All rights reserved.</p>
+
+        <ul>
+          <li>
+            <a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
+          </li>
+          <li>
+            <a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
+          </li>
+          <li>
+            <a href="http://freewebsitetemplates.com/go/googleplus/" id="googleplus">googleplus</a>
+          </li>
+          <li>
+            <a href="http://pinterest.com/fwtemplates/" id="pinterest">pinterest</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
