--- a/index.html
+++ b/index.html
@@ -27,7 +27,41 @@
     </div>
 
     </header>
-    <main id="main"></main>
+
+    <main>
+      <div id="featured">
+        <img src="images/the-beacon.jpg" alt="featured-img">
+        <div>
+          <h2>the beacon to all mankind</h2>
+          <span>Our website templates are created with</span>
+          <span>inspiration, checked for quality and originality</span>
+          <span>and meticulously sliced and coded.</span>
+          <a href="./pages/blog.html" class="more">read more</a>
+        </div>
+      </div>
+
+      <ul>
+        <li>
+          <a href="./pages/.gallery.html">
+            <img src="./images/the-father.jpg" alt="">
+            <span>the father</span>
+          </a>
+        </li>
+        <li>
+          <a href="./pages/gallery.html">
+            <img src="./images/the-actor.jpg" alt="">
+            <span>the actor</span>
+          </a>
+        </li>
+        <li>
+          <a href="./pages/gallery.html">
+            <img src="./images/the-nerd.jpg" alt="">
+            <span>the nerd</span>
+          </a>
+        </li>
+      </ul>
+    </main>
+
     <footer>
       <div>
         <p>© 2023 by Mustacchio. All rights reserved.</p>
