about page & gallery desktop done

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <ul>
         <li>
-          <a href="./pages/.gallery.html">
+          <a href="./pages/gallery.html">
             <img src="./images/the-father.jpg" alt="">
             <span>the father</span>
           </a>
