--- a/pages/blog.html
+++ b/pages/blog.html
@@ -9,6 +9,90 @@
   <link rel="stylesheet" href="../styles/blog.css">
 </head>
 <body>
-  
+  <div class="main-layout">
+    <header>
+      <a class="logo" href="../index.html">
+        <img src="https://freewebsitetemplates.com/preview/mustacheenthusiast/images/logo.jpg" alt="Logo">
+      </a>
+
+    <span id="mobile-navigation"></span>
+    <div class="navigation">
+        <ul class="nav">
+          <li> <a href="../index.html" style="text-decoration: none">Home</a></li>
+          <li> <a href="../pages/about.html" style="text-decoration: none">About</a></li>
+          <li> <a href="../pages/gallery.html" style="text-decoration: none">Gallery</a></li>
+          <li> <a href="../pages/blog.html" style="text-decoration: none">Blog</a></li>
+          <li> <a href="../pages/contact.html" style="text-decoration: none">Contact</a></li>
+        </ul>
+    </div>
+
+    </header>
+
+    <main>
+      <h1><span>blog</span></h1>
+
+      <div>
+        <ul>
+          <li>
+            <a href="" class="figure">
+              <img src="../images/cutting-mustache.jpg" alt="">
+            </a>
+            <div>
+              <h3>why i grew a mustache</h3>
+              <p>
+                This website template has been designed by <a href="https://freewebsitetemplates.com/">Free Website Templates</a> for you, for free. You can replace all this text with your own text.
+              </p>
+              <a href="" class="more">read this</a>
+            </div>
+          </li>
+          <li>
+            <a href="" class="figure">
+              <img src="../images/in-the-country.jpg" alt="">
+            </a>
+            <div>
+              <h3>in the country</h3>
+              <p>
+                Want an easier solution for a <a rel="nofollow" href="" data-ga-event="click" data-ga-category="Text Link" data-ga-action="Ad Click" data-ga-label="Previews - Free Website">Free Website</a>? Head straight to <a rel="nofollow" href="https://freewebsitetemplates.com/link/wix/" data-ga-event="click" data-ga-category="Text Link" data-ga-action="Ad Click" data-ga-label="Previews - Wix">Wix</a> and immediately start customizing your website!
+              </p>
+              <a href="" class="more">read this</a>
+            </div>
+          </li>
+          <li>
+            <a href="" class="figure">
+              <img src="../images/mustache-brothers.jpg" alt="">
+            </a>
+            <div>
+              <h3>the mustache brothers</h3>
+              <p>
+                <a rel="nofollow" href="" data-ga-event="click" data-ga-category="Text Link" data-ga-action="Ad Click" data-ga-label="Previews - Wix">Wix</a> is an online website builder with a simple drag &amp; drop interface, meaning you do the work online and instantly publish to the web. Nothing to download, nothing to upload.
+              </p>
+              <a href="" class="more">read this</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </main>
+
+    <footer>
+      <div>
+        <p>© 2023 by Mustacchio. All rights reserved.</p>
+
+        <ul>
+          <li>
+            <a href="http://freewebsitetemplates.com/go/twitter/" id="twitter">twitter</a>
+          </li>
+          <li>
+            <a href="http://freewebsitetemplates.com/go/facebook/" id="facebook">facebook</a>
+          </li>
+          <li>
+            <a href="http://freewebsitetemplates.com/go/googleplus/" id="googleplus">googleplus</a>
+          </li>
+          <li>
+            <a href="http://pinterest.com/fwtemplates/" id="pinterest">pinterest</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
