--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -34,48 +34,43 @@
 
       <ul class="gallery">
         <li>
-          <a href="">
+          <a href="../pages/gallery.html">
             <img src="../images/mustache1.jpg" alt="">
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="../pages/gallery.html">
             <img src="../images/mustache2.jpg" alt="">
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="../pages/gallery.html">
             <img src="../images/mustache3.jpg" alt="">
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="../pages/gallery.html">
             <img src="../images/mustache4.jpg" alt="">
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="../pages/gallery.html">
             <img src="../images/mustache5.jpg" alt="">
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="../pages/gallery.html">
             <img src="../images/mustache6.jpg" alt="">
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="../pages/gallery.html">
             <img src="../images/mustache7.jpg" alt="">
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="../pages/gallery.html">
             <img src="../images/mustache8.jpg" alt="">
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="../images/mustache9.jpg" alt="">
           </a>
         </li>
       </ul>
